[project]
name = "selahx"
version = "0.1.0"
description = "Remote Access Tool — Fast and lightweight CLI experience."
authors = [
    {name = "Abiy",email = "abiy.dema@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2,<2.3.0)",
    "cffi (>=2.0.0,<3.0.0)",
    "mouseinfo (>=0.1.3,<0.2.0)",
    "mss (>=10.1.0,<11.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pycparser (>=2.23,<3.0)",
    "pygetwindow (>=0.0.9,<0.0.10)",
    "pymsgbox (>=2.0.1,<3.0.0)",
    "pyobjc-core (>=12.0,<13.0)",
    "pyobjc-framework-cocoa (>=12.0,<13.0)",
    "pyobjc-framework-quartz (>=12.0,<13.0)",
    "pyperclip (>=1.11.0,<2.0.0)",
    "pyrect (>=0.2.0,<0.3.0)",
    "pyscreeze (>=1.0.1,<2.0.0)",
    "python3-xlib (>=0.15,<0.16)",
    "pytweening (>=1.2.0,<2.0.0)",
    "readchar (>=4.2.1,<5.0.0)",
    "rubicon-objc (>=0.5.2,<0.6.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
